...
 */
-->
<androidx.constraintlayout.widget.ConstraintLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/harp_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tuning_key_info"
        android:layout_width="wrap_content"
...
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="C | Richter" />

    <TableLayout
        android:id="@+id/harp_table"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:stretchColumns="*"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@id/tuning_key_info"
        app:layout_constraintBottom_toBottomOf="parent"
...
