...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".view.android.TrainingFragment">

    <LinearLayout
        android:id="@+id/training_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/settings_padding">

        <!-- Note Display Card -->
...
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/settings_divider_height"
                    android:layout_marginBottom="@dimen/settings_item_margin"
                    android:background="?attr/colorOutline" />

                <TextView
                    android:id="@+id/training_note"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:background="@drawable/note_blow"
                    android:gravity="center"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:visibility="visible" />
...
